[gd_scene load_steps=6 format=3 uid="uid://c1vg0yntw7eyf"]

[ext_resource type="Script" uid="uid://bdmckj80yb4gu" path="res://Scripts/bat.gd" id="1_r431c"]
[ext_resource type="PackedScene" uid="uid://dbbljh6x3a4wm" path="res://Character/bat_model.tscn" id="2_xqx4u"]
[ext_resource type="AudioStream" uid="uid://bx3idpeigglls" path="res://Assets/mob/mob_take_damage.wav" id="3_du1g8"]
[ext_resource type="AudioStream" uid="uid://bjajl884tgyrw" path="res://Assets/mob/mob_ko.wav" id="4_tm720"]
[gd_scene load_steps=3 format=3 uid="uid://c1vg0yntw7eyf"]

[ext_resource type="Script" uid="uid://bdmckj80yb4gu" path="res://Scripts/bat.gd" id="1_r431c"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ipm0s"]
radius = 0.34928387

[node name="Bat" type="RigidBody3D"]
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_r431c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ipm0s")

[node name="HurtSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_du1g8")

[node name="DeadSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_tm720")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[node name="SyncTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="SyncTimer" to="." method="_on_sync_timer_timeout"]
